--- a/public/projects/barboost/index.html
+++ b/public/projects/barboost/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BARBOOST – Natürlich stark. Ehrlich gut.</title>
+  <meta name="description" content="Entdecke BARBOOST – die Proteinriegel aus 100% natürlichen Zutaten. Ohne künstliche Zusätze, aber mit vollem Geschmack. Jetzt probieren!" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
